--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
     "node": "^20.5.0",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
+    "request": "^2.88.2"
   }
 }
